Feat split workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
-[package]
-name = "rust-tls"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
+resolver = "2"
+members = ["client", "server"]
+default-members = ["server"]
+
+[workspace.dependencies]
