--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+tokio = { version = "1", features = ["full"] }
 rustls = "0.23.12"
-webpki-roots = "0.26.3"
+rustls-pemfile = "2.1.3"
