--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 rustls = "0.23.12"
 rustls-pemfile = "2.1.3"
+tokio = { version = "1", features = ["full"] }
+tokio-rustls = "0.26.0"
