--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["rustls-tls"] }
 tokio = { version = "1", features = ["full"] }
 rustls = "0.23.12"
 rustls-pemfile = "2.1.3"
